[tool.poetry]
name = "NewtestApp"
version = "1.0.0"
description = "New-test-app"
authors = []

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.11.5"
pytest = "^7.2.1"
coverage = "^7.0"
pytest-cov = "^4.0.0"
pytest-dependency = "^0.5.1"
pytest-tap = "^3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "--cov=NewtestApp --cov-fail-under=90 --cov-config=.coveragerc"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
